[workspace]
members = ["context_deserialize", "context_deserialize_derive"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Sigma Prime <contact@sigmaprime.io>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sigp/context_deserialize"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
