[package]
name = "context_deserialize"
description = "Context-aware deserialization trait for Rust data structures, extending serde with additional context parameters"
documentation = "https://docs.rs/context_deserialize"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }

# Optional dependencies.
context_deserialize_derive = { version = "0.1.0", path = "../context_deserialize_derive", optional = true }
milhouse = { version = "0.7.0", optional = true }
ssz_types = { version = "0.12", optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = ["derive"]
derive = ["dep:context_deserialize_derive"]
milhouse = ["dep:milhouse"]
ssz = ["dep:ssz_types"]
all = ["derive", "milhouse", "ssz"]
