[package]
name = "context_deserialize"
description = "Context-aware deserialization trait for Rust data structures, extending serde with additional context parameters"
documentation = "https://docs.rs/context_deserialize"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
context_deserialize_derive = { version = "0.2.0", path = "../context_deserialize_derive", optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = ["derive"]
derive = ["dep:context_deserialize_derive"]
