[package]
name = "context_deserialize_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
context_deserialize = { path = "../context_deserialize" }
serde = { workspace = true }
serde_json = "1.0"
